<resources>
    <string name="app_name">RouteBuddy</string>
    <string name="sign_in">Войдите в систему</string>
    <string name="recover_password">Восстановить пароль</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="last">last</string>
    <string name="enter_the_data">Введите данные</string>
    <string name="name">Имя</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="create">Создать</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="user">Пользователь</string>
    <string name="traffic">Дорожный трафик</string>
    <string name="plus">Плюс</string>
    <string name="minus">Минус</string>
    <string name="location">Геолокация</string>
    <string name="group">Группа</string>
    <string name="close">Закрыть</string>
    <string name="museum">Музеи</string>
    <string name="temple">Храмы</string>
    <string name="entertainment">Развлечения</string>
    <string name="ecotrail">Экотропа</string>
    <string name="boat_trip">Водные прогулки</string>
    <string name="bus_ride">Автобусные прогулки</string>
    <string name="active_leisure">Активный отдых</string>
    <string name="walking_with_children">Прогулки с детьми</string>
    <string name="places_for_photos">Места для фото</string>
    <string name="ready_made_routes">Готовые маршруты</string>
    <string name="group_route">Групповые маршруты</string>
    <string name="empty" />
    <string name="my_routes">Мои маршруты</string>
    <string name="exit">Выход</string>
    <string name="there_are_not_routes_created">Нет созданных маршрутов</string>
    <string name="create_point">Создать точку</string>
    <string name="fill_in_all_the_fields">Заполните все поля</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="cost">Стоимость</string>
    <string name="category">Категории</string>
    <string name="create_route">Создать маршрут</string>
    <string name="select_points_on_the_map">Выберите точки на карте</string>
    <string name="text_of_the_review">Текст отзыва</string>
    <string name="give_rating">Поставьте оценку</string>
    <string name="save_feedback">Сохранить отзыв</string>
    <string name="create_feedback">Создать отзыв</string>
    <string name="there_are_no_reviews">Нет отзывов</string>
    <string name="star1">Первая звезда</string>
</resources>