<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/form_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="360sp"
            android:layout_height="50sp"
            android:layout_marginTop="15sp"
            android:autofillHints="@string/email"
            android:backgroundTint="@color/white_dark"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white_60" />

        <EditText
            android:id="@+id/password"
            android:layout_width="360sp"
            android:layout_height="50sp"
            android:layout_marginTop="5sp"
            android:autofillHints="@string/password"
            android:backgroundTint="@color/white_dark"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white_60" />

        <TextView
            android:id="@+id/recover_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="-35sp"
            android:layout_marginEnd="5sp"
            android:text="@string/recover_password"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:backgroundTint="@color/white_60"
            android:text="@string/enter"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25sp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp" />
</RelativeLayout>