<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.RegisterActivity">

    <ImageButton
        android:id="@+id/last"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginTop="10sp"
        android:background="@color/transparent"
        android:contentDescription="@string/last"
        android:padding="5sp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/last"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70sp"
        android:text="@string/enter_the_data"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="360sp"
            android:layout_height="50sp"
            android:layout_marginTop="5sp"
            android:autofillHints="@string/name"
            android:backgroundTint="@color/white_dark"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white_60" />

        <EditText
            android:id="@+id/email"
            android:layout_width="360sp"
            android:layout_height="50sp"
            android:layout_marginTop="15sp"
            android:autofillHints="@string/email"
            android:backgroundTint="@color/white_dark"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white_60"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="360sp"
            android:layout_height="50sp"
            android:layout_marginTop="5sp"
            android:autofillHints="@string/password"
            android:backgroundTint="@color/white_dark"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white_60" />

        <EditText
            android:id="@+id/password_repeat"
            android:layout_width="360sp"
            android:layout_height="50sp"
            android:layout_marginTop="5sp"
            android:autofillHints="@string/password_repeat"
            android:backgroundTint="@color/white_dark"
            android:hint="@string/password_repeat"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white_60"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/white_60"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>