<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MapsRouteActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_route"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/last"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/custom_image_button"
        android:contentDescription="@string/last"
        android:paddingStart="5sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10sp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/last_black"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/traffic"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_marginTop="150sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/custom_image_button"
        android:contentDescription="@string/traffic"
        android:padding="10sp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/traffic"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/plus"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_marginTop="180sp"
        android:layout_marginEnd="10sp"
        android:alpha="0.8"
        android:background="@drawable/custom_image_button"
        android:contentDescription="@string/plus"
        android:padding="10sp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/traffic"
        app:srcCompat="@drawable/plus"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/minus"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:alpha="0.8"
        android:background="@drawable/custom_image_button"
        android:contentDescription="@string/minus"
        android:padding="10sp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        app:srcCompat="@drawable/minus"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/location"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:layout_marginTop="180sp"
        android:layout_marginEnd="10sp"
        android:alpha="0.8"
        android:background="@drawable/custom_image_button"
        android:contentDescription="@string/location"
        android:padding="10sp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus"
        app:srcCompat="@drawable/location"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/optimization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:background="@color/black_80"
        android:text="@string/optimization"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>