<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_feedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CreateFeedbackActivity">

    <ImageButton
        android:id="@+id/last"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10sp"
        android:background="@color/transparent"
        android:contentDescription="@string/last"
        android:padding="5sp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/last"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />


    <LinearLayout
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="13sp"
        android:layout_marginEnd="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/give_rating"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/star1"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="20sp"
                android:background="@color/transparent"
                android:contentDescription="@string/star1"
                android:padding="5sp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@color/transparent"
                android:contentDescription="@string/star1"
                android:padding="5sp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@color/transparent"
                android:contentDescription="@string/star1"
                android:padding="5sp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@color/transparent"
                android:contentDescription="@string/star1"
                android:padding="5sp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@color/transparent"
                android:contentDescription="@string/star1"
                android:padding="5sp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/empty_star"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/text_of_the_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:autofillHints="@string/text_of_the_review"
            android:hint="@string/text_of_the_review"
            android:inputType="textMultiLine"
            android:maxLines="15"
            android:minHeight="48sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_60"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/save_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:backgroundTint="@color/white_60"
        android:text="@string/save_feedback"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>